RESOLVED FIXED 258560
REGRESSION (264004@main): Images MotionMark subtest shows incorrect rendering on Intel
https://bugs.webkit.org/show_bug.cgi?id=258560
Summary REGRESSION (264004@main): Images MotionMark subtest shows incorrect rendering...
Kimmo Kinnunen
Reported 2023-06-27 05:24:27 PDT
REGRESSION (264004@main): Images MotionMark subtest shows incorrect rendering on Intel
Attachments
Kimmo Kinnunen
Comment 1 2023-06-27 05:24:46 PDT
Kimmo Kinnunen
Comment 2 2023-06-27 05:44:49 PDT
EWS
Comment 3 2023-07-03 04:51:19 PDT
Committed 265712@main (de645b364760): <https://commits.webkit.org/265712@main> Reviewed commits have been landed. Closing PR #15326 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.