Source/WebCore/platform/graphics/cocoa/IOSurface.mm
@@ -462,13 +462,15 @@ ALLOW_DEPRECATED_DECLARATIONS_END
 
 std::optional<IOSurface::LockAndContext> IOSurface::createBitmapPlatformContext()
 {
-    IOSurface::Locker locker { *this, IOSurface::Locker::AccessMode::ReadWrite };
+    auto locker = lock<AccessMode::ReadWrite>();
+    if (!locker)
+        return std::nullopt;
     auto configuration = bitmapConfiguration();
     auto size = this->size();
-    auto context = adoptCF(CGBitmapContextCreate(locker.surfaceBaseAddress(), size.width(), size.height(), configuration.bitsPerComponent, bytesPerRow(), colorSpace().platformColorSpace(), configuration.bitmapInfo));
+    auto context = adoptCF(CGBitmapContextCreate(locker->surfaceBaseAddress(), size.width(), size.height(), configuration.bitsPerComponent, bytesPerRow(), colorSpace().platformColorSpace(), configuration.bitmapInfo));
     if (!context)
         return std::nullopt;
-    return LockAndContext { WTFMove(locker), WTFMove(context) };
+    return LockAndContext { WTFMove(*locker), WTFMove(context) };
 }
 
 SetNonVolatileResult IOSurface::state() const
